--- a/OxfordDictionaryParser/OxfordDictionaryParser.csproj
+++ b/OxfordDictionaryParser/OxfordDictionaryParser.csproj
@@ -10,4 +10,8 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.0.7" />
+  </ItemGroup>
+
 </Project>
