fixes url source

--- a/DictionaryManagerApp/wwwroot/appsettings.json
+++ b/DictionaryManagerApp/wwwroot/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "URIStrings": {
-    "DictionaryManagerApi": "http://localhost:5255"
+    "DictionaryManagerApi": "https://localhost:7280"
   },
   "AllowedHosts": "*"
 
