makes appsetting files ignored

--- a/.gitignore
+++ b/.gitignore
@@ -456,3 +456,5 @@ $RECYCLE.BIN/
 # My changes
 **/*Tests*/
 /DictionaryManagerApp/wwwroot/appsettings.json
+/DictionaryManagerAPI/appsettings.json
+/DictionaryManagerApp/wwwroot/appsettings.json
