implements word list craft component and clears trash

--- a/DictionaryManagerApp/DictionaryManagerApp.csproj
+++ b/DictionaryManagerApp/DictionaryManagerApp.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="8.0.1" PrivateAssets="all" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DictionaryManager.Shared\DictionaryManager.Shared.csproj" />
+  </ItemGroup>
+
 </Project>
